[LE-15805] Create unit test infrastructure
Provide a TAP implementation for easy implemmentation of unit tests, and
use CMake to run unit tests.

Resolves: LE-15805
Change-Id: Ic435ae3d59146195ebc92c7e646247fa62f1a593

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,6 @@ include_directories(
 # Subdirectories
 add_subdirectory(source)
 add_subdirectory(documentation)
-# if (BUILD_TESTING)
-#     add_subdirectory(test/unit)
-# endif()
+if (NOT CMAKE_CROSSCOMPILING)
+    add_subdirectory(tests/unit)
+endif()
