--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -15,3 +15,7 @@ include_directories(
 # First, a basic sanity of tap.h itself.
 add_executable(test_tap_sanity test_tap_sanity.c)
 add_test(test_tap_sanity test_tap_sanity)
+
+# Test the auxilliary functions.
+add_executable(test_auxilliary_checksum test_auxilliary_checksum.c)
+add_test(test_auxilliary_checksum test_auxilliary_checksum)
