[LE-15807] Implement hex conversion
Initially just provides a function to convert a hexadecimal octet (e.g. "3A") to a
byte value.

Resolves: LE-15807
Change-Id: Iae8953ce62c30b494ef787725602a66c2f3e07d2

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -19,3 +19,5 @@ add_test(test_tap_sanity test_tap_sanity)
 # Test the auxilliary functions.
 add_executable(test_auxilliary_checksum test_auxilliary_checksum.c)
 add_test(test_auxilliary_checksum test_auxilliary_checksum)
+add_executable(test_auxilliary_hex test_auxilliary_hex.c)
+add_test(test_auxilliary_hex test_auxilliary_hex)
