[LE-15807] Implement GDB run length encoding
RLE is used to reduce message sizes for responses from the stub to GDB.

Resolves: LE-15807
Change-Id: Ic65f7fb0662c3b108e74d643ac89efe07215a58e

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -21,3 +21,5 @@ add_executable(test_auxilliary_checksum test_auxilliary_checksum.c)
 add_test(test_auxilliary_checksum test_auxilliary_checksum)
 add_executable(test_auxilliary_hex test_auxilliary_hex.c)
 add_test(test_auxilliary_hex test_auxilliary_hex)
+add_executable(test_auxilliary_rle test_auxilliary_rle.c)
+add_test(test_auxilliary_rle test_auxilliary_rle)
