[LE-15807] Add auxiliary files to library build
Also do some slight CMake reorganization.

Resolves: LE-15807
Change-Id: Iad913119b8d653d0402836ab989a1e7cf6e22406

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 #
 # @brief     Top-level CMake file for GDB Stubs.
 #
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.19)
 enable_testing()
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
@@ -19,9 +19,11 @@ include(CTest)
 include(CheckSymbolExists)
 
 # Test for platform features.
-check_symbol_exists(memcpy  "string.h"  HAVE_MEMCPY)
-check_symbol_exists(memset  "string.h"  HAVE_MEMSET)
-check_symbol_exists(strncmp "string.h"  HAVE_STRNCMP)
+check_symbol_exists(memcmp  "string.h" HAVE_MEMCMP)
+check_symbol_exists(memcpy  "string.h" HAVE_MEMCPY)
+check_symbol_exists(memset  "string.h" HAVE_MEMSET)
+check_symbol_exists(strlen  "string.h" HAVE_STRLEN)
+check_symbol_exists(strncmp "string.h" HAVE_STRNCMP)
 
 # Turn on all warnings and treat all warnings as errors.
 set(GNU_LIKE GNU Clang AppleClang)
@@ -30,10 +32,6 @@ if (CMAKE_C_COMPILER_ID IN_LIST GNU_LIKE)
 elseif (MSVC)
     add_compile_options(/W4 /WX)
 endif()
-
-include_directories(
-    ${CMAKE_SOURCE_DIR}/include
-)
 
 # Subdirectories
 add_subdirectory(source)
