[LE-15807] Implement binary encoding/decoding
Includes unit tests.

Resolves: LE-15807
Change-Id: Id890cc0d486c7a3c14660a4102793d12bce9f707

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -10,6 +10,7 @@
 
 # Stub library source files.
 set(SRCS
+    auxilliary/binary.c
     auxilliary/checksum.c
     auxilliary/hex.c
     auxilliary/rle.c
