--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -23,3 +23,5 @@ add_executable(test_auxilliary_hex test_auxilliary_hex.c)
 add_test(test_auxilliary_hex test_auxilliary_hex)
 add_executable(test_auxilliary_rle test_auxilliary_rle.c)
 add_test(test_auxilliary_rle test_auxilliary_rle)
+add_executable(test_auxilliary_binary test_auxilliary_binary.c)
+add_test(test_auxilliary_binary test_auxilliary_binary)
