[LE-15805] Add documentation header to a few files
Resolves: LE-15805
Change-Id: I89c94f8efd74b24199fbbd6a4ad9cd97fb627e79

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+#
+# @file      .gitignore
+# @copyright 2021 Sierra Wireless Inc.
+#
+# @remark
+#     SPDX-License-Identifier: MPL-2.0
+#
+# @brief     File patterns to exclude from version control.
+#
+
 # Build products
 *-build/
 _build/
