[LE-15805] Correct spelling of "auxiliary"
Resolves: LE-15805
Change-Id: Iead36302f2fd70850fe58f9adac861784a484aa9

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -10,10 +10,10 @@
 
 # Stub library source files.
 set(SRCS
-    auxilliary/binary.c
-    auxilliary/checksum.c
-    auxilliary/hex.c
-    auxilliary/rle.c
+    auxiliary/binary.c
+    auxiliary/checksum.c
+    auxiliary/hex.c
+    auxiliary/rle.c
 
     main.c
 )
