[LE-15807] Implement packet handling features
* Add functions to verify received packets, and to split them into tokens
for processing.
* Add functions to compose and send packets.
* Create unit tests for these functions.

Resolves: LE-15807
Change-Id: Ib384809d57fcb3cda69e09522294366fbf9d6a8c

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -13,9 +13,8 @@ set(SRCS
     auxiliary/binary.c
     auxiliary/checksum.c
     auxiliary/hex.c
+    auxiliary/packet.c
     auxiliary/rle.c
-
-    main.c
 )
 
 include_directories(
