--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -19,9 +19,21 @@ add_test(test_tap_sanity test_tap_sanity)
 # Test the auxiliary functions.
 add_executable(test_auxiliary_checksum test_auxiliary_checksum.c)
 add_test(test_auxiliary_checksum test_auxiliary_checksum)
+
 add_executable(test_auxiliary_hex test_auxiliary_hex.c)
 add_test(test_auxiliary_hex test_auxiliary_hex)
+
 add_executable(test_auxiliary_rle test_auxiliary_rle.c)
 add_test(test_auxiliary_rle test_auxiliary_rle)
+
 add_executable(test_auxiliary_binary test_auxiliary_binary.c)
 add_test(test_auxiliary_binary test_auxiliary_binary)
+
+add_executable(
+    test_auxiliary_packet
+    test_auxiliary_packet.c
+    ${CMAKE_SOURCE_DIR}/source/auxiliary/binary.c
+    ${CMAKE_SOURCE_DIR}/source/auxiliary/checksum.c
+    ${CMAKE_SOURCE_DIR}/source/auxiliary/hex.c
+)
+add_test(test_auxiliary_packet test_auxiliary_packet)
