[LE-15808] Detect stdc features
Instead of splitting some detection logic between debug.h and elsewhere,
consolidate it in the stdc directory.

Resolves: LE-15808
Change-Id: Ie4653a3e674f8b3c9c5a3598b4d9119e894a8f75

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ include(CTest)
 include(CheckSymbolExists)
 
 # Test for platform features.
+check_symbol_exists(NULL    "stdlib.h" HAVE_NULL)
+check_symbol_exists(assert  "assert.h" HAVE_ASSERT)
 check_symbol_exists(memcmp  "string.h" HAVE_MEMCMP)
 check_symbol_exists(memcpy  "string.h" HAVE_MEMCPY)
 check_symbol_exists(memset  "string.h" HAVE_MEMSET)
