[LE-15808] Implement core functions
* Add functions to initialize and access stub environment and
  properties.
* Implement entry point for debugger.
* Create unit tests for these functions.

Resolves: LE-15808
Change-Id: I707983c2200539b5c989c982aeb54f4e24284844

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SRCS
     auxiliary/hex.c
     auxiliary/packet.c
     auxiliary/rle.c
+    core.c
 )
 
 include_directories(
@@ -45,6 +46,9 @@ if(HAVE_NULL)
 endif()
 if(HAVE_ASSERT)
     add_compile_definitions(HAVE_ASSERT)
+endif()
+if(HAVE_MEMSET)
+    add_compile_definitions(HAVE_MEMSET)
 endif()
 
 # Generate library of GDB stub code.
