--- a/.github/workflows/desktop-unit-test.yml
+++ b/.github/workflows/desktop-unit-test.yml
@@ -22,7 +22,7 @@ env:
 # Run the unit test builds for each platform.
 jobs:
   unit-test:
-    name:     Unit Test
+    name:     Unit Test (${{ runner.os }})
     runs-on:  ${{ matrix.os }}
     strategy:
       matrix:
@@ -37,10 +37,10 @@ jobs:
     steps:
       # Install dependencies.
       - name: Install APT dependencies
-        if: matrix.os == ubuntu-latest
+        if: matrix.os == 'ubuntu-latest'
         run:  sudo apt-get install -y ninja-build
       - name: Install Homebrew dependencies
-        if: matrix.os == macos-latest
+        if: matrix.os == 'macos-latest'
         run:  brew install ninja
 
       # Check out the code.
@@ -55,11 +55,11 @@ jobs:
 
       # Run CMake configuration.
       - name:               Configure CMake
-        if: matrix.os != windows-latest
+        if: matrix.os != 'windows-latest'
         working-directory:  ${{ github.workspace }}/repo/build
         run:                cmake .. -G Ninja -DCMAKE_BUILD_TYPE="${BUILD_TYPE}"
       - name:               Configure CMake
-        if: matrix.os == windows-latest
+        if: matrix.os == 'windows-latest'
         working-directory:  ${{ github.workspace }}/repo/build
         run:                cmake .. -G 'Visual Studio 16 2019' -A x64
 
