[ci] Ensure Python 3's pip is used

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         run:  brew install doxygen ninja
 
       - name: Install Python dependencies
-        run:  pip install --user  \
+        run:  pip3 install --user \
                 breathe           \
                 sphinx            \
                 sphinx_rtd_theme
